--- a/www/css/tm.css
+++ b/www/css/tm.css
@@ -1,10 +1,10 @@
 img { border: 0; }
 
 #leftcol {
+    width: 240px;
     float: left;
     margin: 0 0.5em 0 0.5em;
     padding: 1em;
-    width: auto;
     background: #BBBBFF;
     font-size: 0.9em;
     font-family: Arial, Helvetica, sans-serif;
@@ -65,7 +65,7 @@ img { border: 0; }
 
 #maincol {
     background: #FFFFFF;
-    margin-left: 16.5em;
+    margin-left: 300px;
     margin-right: 1em;
     margin-bottom: 1em;
 }
